--- a/portfolio.html
+++ b/portfolio.html
@@ -78,16 +78,16 @@
             </button>
           </ul>
           <div class="portfolio-cards">
-            <figure class="portfolio-card">
-              <div class="img-portfolio-card">
+            <figure class="portfolio-cards__figure portfolio-card">
+              <div class="portfolio-cards__img">
                 <img
                   src="images/threepersons.jpg"
                   width="370"
                   height="294"
                   alt="three persons"
                 />
-                <div class="caption">
-                  <p class="caption-content">
+                <div class="portfolio-cards__overlay">
+                  <p class="portfolio-cards__overlay_content">
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                     Sit nulla numquam dolores in reiciendis temporibus
                     voluptates voluptas repudiandae, quod, dolorem, labore earum
@@ -95,13 +95,13 @@
                   </p>
                 </div>
               </div>
-              <figcaption class="portfolio-figcaption">
-                <h2 class="name">Technocrack</h2>
-                <p class="describe">Strona internetowa</p>
+              <figcaption class="portfolio-cards__figcaption">
+                <h2 class="portfolio-cards__figcaption_name">Technocrack</h2>
+                <p class="portfolio-cards__figcaption_describe">Strona internetowa</p>
               </figcaption>
             </figure>
-            <figure class="portfolio-card">
-              <div class="img-portfolio-card">
+            <figure class="portfolio-cards__figure portfolio-card">
+              <div class="portfolio-cards__img">
                 <img
                   src="images/basketball.jpg"
                   width="370"
@@ -109,8 +109,8 @@
                   alt="basketball"
                 />
 
-                <div class="caption">
-                  <p class="caption-content">
+                <div class="portfolio-cards__overlay">
+                  <p class="portfolio-cards__overlay_content">
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                     Sit nulla numquam dolores in reiciendis temporibus
                     voluptates voluptas repudiandae, quod, dolorem, labore earum
@@ -118,22 +118,21 @@
                   </p>
                 </div>
               </div>
-
-              <figcaption class="portfolio-figcaption">
-                <h2 class="name">Grafika New Orlean vs Golden Star</h2>
-                <p class="describe">Dizajn</p>
+              <figcaption class="portfolio-cards__figcaption">
+                <h2 class="portfolio-cards__figcaption_name">Technocrack</h2>
+                <p class="portfolio-cards__figcaption_describe">Strona internetowa</p>
               </figcaption>
             </figure>
-            <figure class="portfolio-card">
-              <div class="img-portfolio-card">
+            <figure class="portfolio-cards__figure portfolio-card">
+              <div class="portfolio-cards__img">
                 <img
                   src="images/seafood.jpg"
                   width="370"
                   height="294"
                   alt="seafood"
                 />
-                <div class="caption">
-                  <p class="caption-content">
+                <div class="portfolio-cards__overlay">
+                  <p class="portfolio-cards__overlay_content">
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                     Sit nulla numquam dolores in reiciendis temporibus
                     voluptates voluptas repudiandae, quod, dolorem, labore earum
@@ -141,21 +140,21 @@
                   </p>
                 </div>
               </div>
-              <figcaption class="portfolio-figcaption">
-                <h2 class="name">Restauracja Seafood</h2>
-                <p class="describe">Aplikacja</p>
+              <figcaption class="portfolio-cards__figcaption">
+                <h2 class="portfolio-cards__figcaption_name">Technocrack</h2>
+                <p class="portfolio-cards__figcaption_describe">Strona internetowa</p>
               </figcaption>
             </figure>
-            <figure class="portfolio-card">
-              <div class="img-portfolio-card">
+            <figure class="portfolio-cards__figure portfolio-card">
+              <div class="portfolio-cards__img">
                 <img
                   src="images/earphone.jpg"
                   width="370"
                   height="294"
                   alt="earphone"
                 />
-                <div class="caption">
-                  <p class="caption-content">
+                <div class="portfolio-cards__overlay">
+                  <p class="portfolio-cards__overlay_content">
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                     Sit nulla numquam dolores in reiciendis temporibus
                     voluptates voluptas repudiandae, quod, dolorem, labore earum
@@ -163,21 +162,21 @@
                   </p>
                 </div>
               </div>
-              <figcaption class="portfolio-figcaption">
-                <h2 class="name">Projekt Prime</h2>
-                <p class="describe">Marketing</p>
+              <figcaption class="portfolio-cards__figcaption">
+                <h2 class="portfolio-cards__figcaption_name">Technocrack</h2>
+                <p class="portfolio-cards__figcaption_describe">Strona internetowa</p>
               </figcaption>
             </figure>
-            <figure class="portfolio-card">
-              <div class="img-portfolio-card">
+            <figure class="portfolio-cards__figure portfolio-card">
+              <div class="portfolio-cards__img">
                 <img
                   src="images/boxes.jpg"
                   width="370"
                   height="294"
                   alt="boxes"
                 />
-                <div class="caption">
-                  <p class="caption-content">
+                <div class="portfolio-cards__overlay">
+                  <p class="portfolio-cards__overlay_content">
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                     Sit nulla numquam dolores in reiciendis temporibus
                     voluptates voluptas repudiandae, quod, dolorem, labore earum
@@ -185,21 +184,21 @@
                   </p>
                 </div>
               </div>
-              <figcaption class="portfolio-figcaption">
-                <h2 class="name">Projekt Boxes</h2>
-                <p class="describe">Aplikacja</p>
+              <figcaption class="portfolio-cards__figcaption">
+                <h2 class="portfolio-cards__figcaption_name">Technocrack</h2>
+                <p class="portfolio-cards__figcaption_describe">Strona internetowa</p>
               </figcaption>
             </figure>
-            <figure class="portfolio-card">
-              <div class="img-portfolio-card">
+            <figure class="portfolio-cards__figure portfolio-card">
+              <div class="portfolio-cards__img">
                 <img
                   src="images/monitor.jpg"
                   width="370"
                   height="294"
                   alt="monitor"
                 />
-                <div class="caption">
-                  <p class="caption-content">
+                <div class="portfolio-cards__overlay">
+                  <p class="portfolio-cards__overlay_content">
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                     Sit nulla numquam dolores in reiciendis temporibus
                     voluptates voluptas repudiandae, quod, dolorem, labore earum
@@ -207,21 +206,21 @@
                   </p>
                 </div>
               </div>
-              <figcaption class="portfolio-figcaption">
-                <h2 class="name">Inspiration has no Borders</h2>
-                <p class="describe">Strona internetowa</p>
+              <figcaption class="portfolio-cards__figcaption">
+                <h2 class="portfolio-cards__figcaption_name">Technocrack</h2>
+                <p class="portfolio-cards__figcaption_describe">Strona internetowa</p>
               </figcaption>
             </figure>
-            <figure class="portfolio-card">
-              <div class="img-portfolio-card">
+            <figure class="portfolio-cards__figure portfolio-card">
+              <div class="portfolio-cards__img">
                 <img
                   src="images/book.jpg"
                   width="370"
                   height="294"
                   alt="book"
                 />
-                <div class="caption">
-                  <p class="caption-content">
+                <div class="portfolio-cards__overlay">
+                  <p class="portfolio-cards__overlay_content">
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                     Sit nulla numquam dolores in reiciendis temporibus
                     voluptates voluptas repudiandae, quod, dolorem, labore earum
@@ -229,21 +228,21 @@
                   </p>
                 </div>
               </div>
-              <figcaption class="portfolio-figcaption">
-                <h2 class="name">Magazyn Limited Edition</h2>
-                <p class="describe">Dizajn</p>
+              <figcaption class="portfolio-cards__figcaption">
+                <h2 class="portfolio-cards__figcaption_name">Technocrack</h2>
+                <p class="portfolio-cards__figcaption_describe">Strona internetowa</p>
               </figcaption>
             </figure>
-            <figure class="portfolio-card">
-              <div class="img-portfolio-card">
+            <figure class="portfolio-cards__figure portfolio-card">
+              <div class="portfolio-cards__img">
                 <img
                   src="images/label.jpg"
                   width="370"
                   height="294"
                   alt="label"
                 />
-                <div class="caption">
-                  <p class="caption-content">
+                <div class="portfolio-cards__overlay">
+                  <p class="portfolio-cards__overlay_content">
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                     Sit nulla numquam dolores in reiciendis temporibus
                     voluptates voluptas repudiandae, quod, dolorem, labore earum
@@ -251,21 +250,21 @@
                   </p>
                 </div>
               </div>
-              <figcaption class="portfolio-figcaption">
-                <h2 class="name">Projekt LAB</h2>
-                <p class="describe">Marketing</p>
+              <figcaption class="portfolio-cards__figcaption">
+                <h2 class="portfolio-cards__figcaption_name">Technocrack</h2>
+                <p class="portfolio-cards__figcaption_describe">Strona internetowa</p>
               </figcaption>
             </figure>
-            <figure class="portfolio-card">
-              <div class="img-portfolio-card">
+            <figure class="portfolio-cards__figure portfolio-card">
+              <div class="portfolio-cards__img">
                 <img
                   src="images/laptop.jpg"
                   width="370"
                   height="294"
                   alt="laptop"
                 />
-                <div class="caption">
-                  <p class="caption-content">
+                <div class="portfolio-cards__overlay">
+                  <p class="portfolio-cards__overlay_content">
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                     Sit nulla numquam dolores in reiciendis temporibus
                     voluptates voluptas repudiandae, quod, dolorem, labore earum
@@ -273,9 +272,9 @@
                   </p>
                 </div>
               </div>
-              <figcaption class="portfolio-figcaption">
-                <h2 class="name">Growing Business</h2>
-                <p class="describe">Aplikacja</p>
+              <figcaption class="portfolio-cards__figcaption">
+                <h2 class="portfolio-cards__figcaption_name">Technocrack</h2>
+                <p class="portfolio-cards__figcaption_describe">Strona internetowa</p>
               </figcaption>
             </figure>
           </div>
