--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
             </a>
             <ul class="menu-nav__list">
               <li class="menu-nav__item">
-                <a href="index.html" class="menu-item-mark">Agencja</a>
+                <a href="index.html" class="menu-nav__item_mark">Agencja</a>
               </li>
               <li class="menu-nav__item">
-                <a href="portfolio.html" class="menu-item">Portfolio</a>
+                <a href="portfolio.html" class="menu-nav__item_text">Portfolio</a>
               </li>
               <li class="menu-nav__item">
-                <a href="/Kontakt/" class="menu-item">Kontakt</a>
+                <a href="/Kontakt/" class="menu-nav__item_text">Kontakt</a>
               </li>
             </ul>
-            <a href="mailto:info@devstudio.com" class="email">
+            <a href="mailto:info@devstudio.com" class="page-header__email">
               <svg class="email__icon">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
             </a>
-            <a href="tel:+48111111111" class="phone">
+            <a href="tel:+48111111111" class="page-header__phone">
               <svg class="phone__icon">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
@@ -62,7 +62,7 @@
       <div class="head-overlay">
         <div class="container">
           <p class="head-overlay__text">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</p>
-          <button class="button" type="submit">
+          <button class="button" type="submit" data-modal-open>
             <p class="button__text">Zamów usługę</p>
           </button>
         </div>
@@ -70,51 +70,51 @@
 
       <section title="Nasze atuty" class="section">
         <div class="container">
-          <div class="columns">
+          <div class="article-columns">
             <article>
-              <div class="article-icon-container">
-                <svg class="article-icon">
+              <div class="article__icon_container">
+                <svg class="article__icon">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h2 class="advantages-header">LOREM IPSUM</h2>
-              <p class="advantages-describe">
+              <h2 class="article__header">LOREM IPSUM</h2>
+              <p class="article__describe">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </article>
             <article>
-              <div class="article-icon-container">
-                <svg class="article-icon">
+              <div class="article__icon_container">
+                <svg class="article__icon">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h2 class="advantages-header">LOREM IPSUM</h2>
-              <p class="advantages-describe">
+              <h2 class="article__header">LOREM IPSUM</h2>
+              <p class="article__describe">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </article>
             <article>
-              <div class="article-icon-container">
-                <svg class="article-icon">
+              <div class="article__icon_container">
+                <svg class="article__icon">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h2 class="advantages-header">LOREM IPSUM</h2>
-              <p class="advantages-describe">
+              <h2 class="article__header">LOREM IPSUM</h2>
+              <p class="article__describe">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </article>
             <article>
-              <div class="article-icon-container">
-                <svg class="article-icon">
+              <div class="article__icon_container">
+                <svg class="article__icon">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h2 class="advantages-header">LOREM IPSUM</h2>
-              <p class="advantages-describe">
+              <h2 class="article__header">LOREM IPSUM</h2>
+              <p class="article__describe">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
@@ -476,75 +476,80 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="close-btn" data-modal-close="">X</button>
-        <form class="modal-form-contact">
-          <p class="modal-head-text">Zostaw swoje dane w formularzu poniżej</p>
-          <label class="modal-label-name" for="modal-text-name">
-            <p class="modal-text-name">Imię</p>
-            <div class="input-icon-container">
+        <form class="form">
+          <p class="form__title">Zostaw swoje dane w formularzu poniżej</p>
+          <label class="form__label" for="modal-text-name">
+            <p class="form__label_text">Imię</p>
+            <div class="form__input_icon_container">
               <input
-                class="modal-user-name"
+                class="form__input"
                 id="modal-text-name"
                 type="name"
                 name="name"
               />
-              <svg class="icon-user-name">
+              <svg class="form__input_icon">
                 <use href="./images/icons.svg#icon-modal-person"></use>
               </svg>
             </div>
           </label>
-          <label class="modal-label-phone" for="tel">
-            <p class="modal-text-phone">Telefon</p>
-            <div class="input-icon-container">
+          <label class="form__label" for="modal-text-name">
+            <p class="form__label_text">Telefon</p>
+            <div class="form__input_icon_container">
               <input
-                class="modal-phone-number"
-                id="tel"
-                type="tel"
-                name="phone_number"
+                class="form__input"
+                id="modal-text-name"
+                type="name"
+                name="name"
               />
-              <svg class="icon-phone-number">
+              <svg class="form__input_icon">
                 <use href="./images/icons.svg#icon-modal-phone"></use>
               </svg>
             </div>
           </label>
-          <label class="modal-label-email" for="email">
-            <p class="modal-text-email">Email</p>
-            <div class="input-icon-container">
-              <input class="modal-email" id="email" type="email" name="email" />
-              <svg class="icon-modal-email">
+          <label class="form__label" for="modal-text-name">
+            <p class="form__label_text">Email</p>
+            <div class="form__input_icon_container">
+              <input
+                class="form__input"
+                id="modal-text-name"
+                type="name"
+                name="name"
+              />
+              <svg class="form__input_icon">
                 <use href="./images/icons.svg#icon-modal-email"></use>
               </svg>
             </div>
           </label>
-          <label class="modal-label-feedback">
-            <p class="modal-text-feedback">Komentarz</p>
+          <label class="form__label">
+            <p class="form__label_text">Komentarz</p>
             <div class="modal-textarea-container">
               <textarea
-                class="modal-textarea"
+                class="form__textarea"
                 name="feedback"
                 rows="7"
                 placeholder="Wprowadź tekst"
               ></textarea>
             </div>
           </label>
-          <div class="modal-checkbox">
-            <div class="checkbox-icon-container">
+          <div class="checkbox">
+            <div class="checkbox__icon-container">
               <input
-                class="modal-checkbox-input visually-hidden"
+                class="checkbox__input visually-hidden"
                 id="user-policy"
                 type="checkbox"
                 name="modal-rules"
                 value="modal-rules"
               />
-              <label for="user-policy" class="modal-checkbox-text">
+              <label for="user-policy" class="checkbox__label">
                 Oświadczam iż akceptuję
-                <a class="modal-rules" href="#">Regulamin</a> i
-                <a class="modal-rules" href="#">Politykę Prywatności.</a>
+                <a class="checkbox__label--text_mark" href="#">Regulamin</a> i
+                <a class="checkbox__label--text_mark" href="#">Politykę Prywatności.</a>
               </label>
             </div>
           </div>
 
-          <div class="modal-button-container">
-            <button class="modal-form-button" type="submit">Wyślij</button>
+          <div class="form__button_container">
+            <button class="form__button" type="submit">Wyślij</button>
           </div>
         </form>
       </div>
