--- a/portfolio.html
+++ b/portfolio.html
@@ -32,22 +32,22 @@
             </a>
             <ul class="menu-nav__list">
               <li class="menu-nav__item">
-                <a href="index.html" class="menu-item">Agencja</a>
+                <a href="index.html" class="menu-nav__item_text">Agencja</a>
               </li>
               <li class="menu-nav__item">
-                <a href="portfolio.html" class="menu-item-mark">Portfolio</a>
+                <a href="portfolio.html" class="menu-nav__item_mark">Portfolio</a>
               </li>
               <li class="menu-nav__item">
-                <a href="/Kontakt/" class="menu-item">Kontakt</a>
+                <a href="/Kontakt/" class="menu-nav__item_text">Kontakt</a>
               </li>
             </ul>
-            <a href="mailto:info@devstudio.com" class="email">
+            <a href="mailto:info@devstudio.com" class="page-header__email">
               <svg class="email__icon">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
             </a>
-            <a href="tel:+48111111111" class="phone">
+            <a href="tel:+48111111111" class="page-header__phone">
               <svg class="phone__icon">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
@@ -357,9 +357,9 @@
             placeholder="E-mail"
           />
 
-          <button class="button" type="submit">
-            <p class="button__text">Zapisz się</p>
-            <svg class="button__icon">
+          <button class="button button--newsletter" type="submit">
+            <p class="button__text button__text--newsletter">Zapisz się</p>
+            <svg class="button__icon button__icon--newsletter">
               <use href="./images/icons.svg#icon-icon-send"></use>
             </svg>
           </button>
