--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./css/styles.css" />
+    <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
+    <link rel="stylesheet" href="./css/main.min.css">
 
     <title>Main page</title>
   </head>
